# opengl_game_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
opengl_game_project/: opengl_game_project.sln
opengl_game_project/opengl_game_project/: opengl_game_project.vcxproj  opengl_game_project.vcxproj.filters
opengl_game_project/opengl_game_project/res/shaders/: font_fragment.glsl  font_vertex.glsl  fragment.glsl  vertex.glsl
opengl_game_project/opengl_game_project/src/: Font.cpp  Font.h  IndexBuffer.cpp  IndexBuffer.h  Text.cpp  Text.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  application.cpp  display.cpp  display.h  display.hpp  entity.cpp  entity.h  font.hpp  font_renderer.cpp  font_renderer.h  index_buffer.cpp  index_buffer.h  mouse.cpp  mouse.h  mouse.hpp  program.cpp  program.h  renderer.cpp  renderer.h  shader.cpp  shader.h  text.hpp  texture.cpp  texture.h  utils.h  utils.hpp  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
opengl_game_project/opengl_game_project/src/components/: BaseComponent.hpp  DrawableComponent.cpp  DrawableComponent.hpp  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  Text.cpp  TextComponent.cpp  TextComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  base_component.cpp  base_component.hpp  component.h  component.hpp  drawable.cpp  drawable.h  drawable.hpp  transform.cpp  transform.hpp
opengl_game_project/opengl_game_project/src/core/: BatchRenderer.cpp  BatchRenderer.hpp  SpriteSheet.cpp  SpriteSheet.hpp
opengl_game_project/opengl_game_project/src/entities/: EntityManager.cpp  EntityManager.hpp  entity.cpp  entity.h  entity.hpp  entity_manager.cpp  entity_manager.hpp
opengl_game_project/opengl_game_project/src/gl/: GLDrawable.hpp  GLObject.hpp  gl_drawable.h  gl_drawable.hpp  gl_object.hpp
opengl_game_project/opengl_game_project/src/gl/drawables/: IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  (+13 more)
opengl_game_project/opengl_game_project/src/interfaces/: IComponent.cpp  IComponent.hpp  IRenderer.cpp  IRenderer.hpp  ISystem.cpp  ISystem.hpp
opengl_game_project/opengl_game_project/src/scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManager.hpp  TestScene.cpp  TestScene.h  TestScene.hpp  scene.hpp  scene_manager.cpp  scene_manager.h  scene_manager.hpp  test_scene.cpp  test_scene.h  test_scene.hpp
opengl_game_project/opengl_game_project/src/systems/: FontRenderer.cpp  FontRenderer.hpp  PlayerMovement.cpp  PlayerMovement.hpp  SpriteAnimationSystem.cpp  SpriteAnimationSystem.hpp  player_movement.cpp  player_movement.hpp  renderer.cpp  renderer.h  renderer.hpp  system.cpp  system.h  system.hpp
opengl_game_project/opengl_game_project/src/utility/: Display.cpp  Display.hpp  Font.cpp  Font.hpp  Keyboard.hpp
res/fonts/Roboto/: LICENSE.txt
res/shaders/: font_fragment.glsl  font_vertex.glsl
src/: CMakeLists.txt  application.cpp
src/components/: BaseComponent.hpp  CMakeLists.txt  DrawableComponent.cpp  DrawableComponent.hpp  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/core/: BatchRenderer.cpp  BatchRenderer.hpp  CMakeLists.txt
src/entities/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/gl/: CMakeLists.txt  GLDrawable.hpp  GLObject.hpp
src/gl/drawables/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/gl/objects/: CMakeLists.txt  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp
src/interfaces/: CMakeLists.txt  IComponent.cpp  IComponent.hpp  IRenderer.cpp  IRenderer.hpp  ISystem.cpp  ISystem.hpp
src/scenes/: CMakeLists.txt  Scene.hpp  SceneManager.cpp  SceneManager.hpp  TestScene.cpp  TestScene.hpp
src/systems/: CMakeLists.txt  FontRenderer.cpp  FontRenderer.hpp  PlayerMovement.cpp  PlayerMovement.hpp  SpriteAnimationSystem.cpp  SpriteAnimationSystem.hpp
src/utility/: CMakeLists.txt  Display.cpp  Display.hpp  Font.cpp  Font.hpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  UUID.hpp  Utils.hpp
(+6 files in other folders)
